--- a/index.html
+++ b/index.html
@@ -3,9 +3,52 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    
     <title>Sending love for you</title>
   </head>
+  <style>
+    body {
+  font-family: Arial, sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+.container {
+  text-align: center;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+  color: #333;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #ff6b6b;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #ff4d4d;
+}
+
+.red {
+  color: red;
+}
+
+  </style>
   <body>
     <!-- <div class="container">
       <h1 class="heading">Only for you darling</h1>
@@ -18,6 +61,37 @@
       <p id="quote"></p>
       <button id="generateBtn">Click here to know my feeling for you</button>
     </div>
-    <script src="script.js"></script>
+    <script >
+      const quotes = [
+  "Love is not just a feeling; it's a choice that we make every day.",
+  "In your smile, I found something more beautiful than stars.",
+  "You are the missing piece to my puzzle.",
+  "True love stories never have endings.",
+  "Being deeply loved by someone gives you strength, while loving someone deeply gives you courage.",
+  "Love is composed of a single soul inhabiting two bodies.",
+  "Every love story is beautiful, but ours is my favorite.",
+  "Bacha, in the garden of my heart, you're the most beautiful blossom.",
+  "Bacha, your smile lights up my world and warms even the coldest of days.",
+  "With you, Bacha, every moment becomes a treasured memory.",
+  "Bacha, your laughter is like a melody that plays in my heart.",
+  "In your eyes, Bacha, I find a universe of love and endless possibilities.",
+  "Bacha, you're the gentle whisper in the breeze that soothes my soul.",
+  "With every beat of my heart, Bacha, I fall deeper in love with you.",
+  "Bacha, your presence is a gift that fills my life with joy and meaning.",
+  "In the book of my life, Bacha, you're the most beautiful chapter.",
+  "Bacha, you and me together make a love story that's written among the stars.",
+];
+
+const quoteElement = document.getElementById("quote");
+const generateBtn = document.getElementById("generateBtn");
+
+generateBtn.addEventListener("click", generateQuote);
+
+function generateQuote() {
+  const randomIndex = Math.floor(Math.random() * quotes.length);
+  quoteElement.textContent = quotes[randomIndex];
+}
+
+    </script>
   </body>
 </html>
